--- a/TSBB11/TSBB11.vcxproj.filters
+++ b/TSBB11/TSBB11.vcxproj.filters
@@ -43,4 +43,12 @@
       <Filter>Source Files\Common</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\main.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="shaders\main.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+  </ItemGroup>
 </Project>
