--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,8 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+
+# ========================
+# Other Ignores
+# ========================
+*.orig
