Implemented rudimentary camera controls and a simple phong shader.

--- a/TSBB11/TSBB11.vcxproj
+++ b/TSBB11/TSBB11.vcxproj
@@ -90,6 +90,14 @@
     <None Include="shaders\main.frag" />
     <None Include="shaders\main.vert" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="common\GL_utilities.h" />
+    <ClInclude Include="common\loadobj.h" />
+    <ClInclude Include="common\LoadTGA.h" />
+    <ClInclude Include="common\VectorUtils3.h" />
+    <ClInclude Include="common\Windows\glew.h" />
+    <ClInclude Include="common\Windows\MicroGlut.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
