--- a/TSBB11/TSBB11.vcxproj.filters
+++ b/TSBB11/TSBB11.vcxproj.filters
@@ -19,6 +19,12 @@
     <Filter Include="Source Files\Shaders">
       <UniqueIdentifier>{cd04c138-1b2e-4f0a-8674-cc619a1c4031}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Custom">
+      <UniqueIdentifier>{aacdb6d8-f1ae-4f54-8fc4-da4ba15d7f0b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Custom">
+      <UniqueIdentifier>{b05267cf-1923-48ae-8912-26a54c11ee4b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -41,6 +47,9 @@
     </ClCompile>
     <ClCompile Include="common\VectorUtils3.c">
       <Filter>Source Files\Common</Filter>
+    </ClCompile>
+    <ClCompile Include="src\controls.cpp">
+      <Filter>Source Files\Custom</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -69,6 +78,9 @@
     </ClInclude>
     <ClInclude Include="common\VectorUtils3.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\controls.h">
+      <Filter>Header Files\Custom</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
