--- a/TSBB11/TSBB11.vcxproj.filters
+++ b/TSBB11/TSBB11.vcxproj.filters
@@ -42,8 +42,8 @@
     <ClCompile Include="src\camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\SDL_util.c">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="src\common\SDL_util.c">
+      <Filter>Source Files\Common</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -59,9 +59,6 @@
     <ClInclude Include="src\camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\SDL_util.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\common\Windows\glew.h">
       <Filter>Header Files\Common</Filter>
     </ClInclude>
@@ -69,6 +66,9 @@
       <Filter>Header Files\Common</Filter>
     </ClInclude>
     <ClInclude Include="src\common\Windows\sdl2\SDL.h">
+      <Filter>Header Files\Common</Filter>
+    </ClInclude>
+    <ClInclude Include="src\common\SDL_util.h">
       <Filter>Header Files\Common</Filter>
     </ClInclude>
   </ItemGroup>
