Started mergin in Dataset, load DEM data works

--- a/TSBB11/TSBB11.vcxproj
+++ b/TSBB11/TSBB11.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="src\common\LoadTGA.c" />
     <ClCompile Include="src\common\SDL_util.c" />
     <ClCompile Include="src\common\Windows\glew.c" />
+    <ClCompile Include="src\readData.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\camera.h" />
@@ -101,10 +102,16 @@
     <ClInclude Include="src\common\Windows\glew.h" />
     <ClInclude Include="src\common\Windows\sdl2\SDL.h" />
     <ClInclude Include="src\common\Windows\wglew.h" />
+    <ClInclude Include="src\readData.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="src\shaders\combineshader.frag" />
+    <None Include="src\shaders\confidenceshader.frag" />
+    <None Include="src\shaders\filtershader.frag" />
     <None Include="src\shaders\main.frag" />
     <None Include="src\shaders\main.vert" />
+    <None Include="src\shaders\plaintextureshader.frag" />
+    <None Include="src\shaders\plaintextureshader.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
