--- a/TSBB11/TSBB11.vcxproj.filters
+++ b/TSBB11/TSBB11.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\common\SDL_util.c">
       <Filter>Source Files\Common</Filter>
     </ClCompile>
+    <ClCompile Include="src\readData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common\GL_utilities.h">
@@ -71,12 +74,30 @@
     <ClInclude Include="src\common\SDL_util.h">
       <Filter>Header Files\Common</Filter>
     </ClInclude>
+    <ClInclude Include="src\readData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\shaders\main.frag">
       <Filter>Source Files\Shaders</Filter>
     </None>
     <None Include="src\shaders\main.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\combineshader.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\confidenceshader.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\filtershader.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\plaintextureshader.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\plaintextureshader.vert">
       <Filter>Source Files\Shaders</Filter>
     </None>
   </ItemGroup>
