Created file structure for flowsource class and starded implementation

--- a/TSBB11/src/xml/makefile
+++ b/TSBB11/src/xml/makefile
@@ -2,5 +2,7 @@ IDIR =../../lib/PugiXML/src
 CC = g++
 CFLAGS = -I$(IDIR) -std=c++0x
 
-make: xmlParsing.cpp ../../lib/PugiXML/src/pugixml.cpp 
-	g++ -o test xmlParsing.cpp ../../lib/PugiXML/src/pugixml.cpp $(CFLAGS)
+make: xmlParsing.cpp flowSource.cpp ../../lib/PugiXML/src/pugixml.cpp
+	g++ -o test xmlParsing.cpp flowSource.cpp ../../lib/PugiXML/src/pugixml.cpp $(CFLAGS)
+  clean:
+	$(RM) test
