Commit of modifications described by previous commit.

--- a/TSBB11/src/xml/makefile
+++ b/TSBB11/src/xml/makefile
@@ -1,8 +1,8 @@
-IDIR =../../lib/PugiXML/src
+IDIR = ../common/xml
 CC = g++
 CFLAGS = -I$(IDIR) -std=c++0x
 
-make: xmlParsing.cpp flowSource.cpp ../../lib/PugiXML/src/pugixml.cpp
-	g++ -o test xmlParsing.cpp flowSource.cpp ../../lib/PugiXML/src/pugixml.cpp $(CFLAGS)
+make: xmlParsing.cpp flowSource.cpp $(IDIR)/pugixml.cpp
+	g++ -o test xmlParsing.cpp flowSource.cpp $(IDIR)/pugixml.cpp $(CFLAGS)
   clean:
 	$(RM) test
