--- a/TSBB11/TSBB11.vcxproj
+++ b/TSBB11/TSBB11.vcxproj
@@ -115,6 +115,9 @@
     <ClInclude Include="src\readData.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="makefile" />
+    <None Include="resources\Doxyfile" />
+    <None Include="resources\mainpage.dox" />
     <None Include="src\shaders\combineshader.frag" />
     <None Include="src\shaders\confidenceshader.frag" />
     <None Include="src\shaders\filtershader.frag" />
