Added VS project files for compilation. This branch is based on a too old version of the master.

--- a/TSBB11/TSBB11.vcxproj.filters
+++ b/TSBB11/TSBB11.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="src\readData.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\voxel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common\GL_utilities.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files\Common</Filter>
     </ClInclude>
     <ClInclude Include="src\readData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\voxel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
