Clean up of file structur, added comments and made a separate test file.

--- a/TSBB11/src/xml/makefile
+++ b/TSBB11/src/xml/makefile
@@ -2,7 +2,7 @@ IDIR = ../common/xml
 CC = g++
 CFLAGS = -I$(IDIR) -std=c++0x
 
-make: xmlParsing.cpp flowSource.cpp $(IDIR)/pugixml.cpp
-	g++ -o test xmlParsing.cpp flowSource.cpp $(IDIR)/pugixml.cpp $(CFLAGS)
+make: testing.cpp xmlParsing.cpp flowSource.cpp $(IDIR)/pugixml.cpp
+	g++ -o test testing.cpp xmlParsing.cpp flowSource.cpp $(IDIR)/pugixml.cpp $(CFLAGS)
   clean:
 	$(RM) test
