auto norm conv and GPU normal generation with sobel

--- a/TSBB11/TSBB11.vcxproj
+++ b/TSBB11/TSBB11.vcxproj
@@ -123,6 +123,7 @@
     <None Include="src\shaders\filtershader.frag" />
     <None Include="src\shaders\main.frag" />
     <None Include="src\shaders\main.vert" />
+    <None Include="src\shaders\normalshader.frag" />
     <None Include="src\shaders\plaintextureshader.frag" />
     <None Include="src\shaders\plaintextureshader.vert" />
   </ItemGroup>
