--- a/TSBB11/TSBB11.vcxproj.filters
+++ b/TSBB11/TSBB11.vcxproj.filters
@@ -109,5 +109,8 @@
     <None Include="makefile">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="src\shaders\normalshader.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
