First test implementation of UI usind AntTweakBar.

--- a/TSBB11/makefile
+++ b/TSBB11/makefile
@@ -1,12 +1,15 @@
 ifeq ($(shell uname), Darwin)
 	PLATFORM=mac
+	ANT=ant
 endif
 ifeq ($(shell uname), Linux)
 	PLATFORM=linux
 endif
 $SOURCEDIR = src
 
+$(shell export DYLD_LIBRARY_PATH=$$DYLD_LIBRARY_PATH:/System/Library/Frameworks/OpenGL.framework/Versions/Current/)
 CPP_FILES := $(wildcard src/*.cpp)
+
 OBJ_FILES_CPP := $(addprefix obj/,$(notdir $(CPP_FILES:.cpp=.o)))
 
 
@@ -14,13 +17,14 @@ C_FILES_COMMON := $(wildcard src/common/*.c)
 
 OBJ_FILES_COMMON := $(addprefix obj/,$(notdir $(C_FILES_COMMON:.c=.o)))
 
-INC = -Isrc/ -Isrc/common/ -Isrc/common/glm
+INC = -Isrc/ -Isrc/common/ -Isrc/common/glm -Ilib/AntTweak/include
 MAIN = main.cpp
 OUT = bin/WaterFlow
 
 ifeq ($(PLATFORM),mac)
+$(shell export $ANT)
 INC += -F/Library/Frameworks/
-LINKS =  -framework OpenGL -framework GLUT -framework Cocoa -framework SDL2
+LINKS =  -framework OpenGL -framework GLUT -framework Cocoa -framework SDL2 -Llib/AntTweak/lib -lAntTweakBar
 endif
 
 GCC = g++ -Wall -pedantic -std=c++0x
@@ -29,12 +33,17 @@ GCC = g++ -Wall -pedantic -std=c++0x
 ifeq ($(PLATFORM),linux)
 INC += $(shell pkg-config --cflags sdl2)
 LINKS = $(shell pkg-config --libs sdl2)
-LINKS += -lGL -lglut -lm -lXt -lX11 
+LINKS += -lGL -lglut -lm -lXt -lX11
 GCC += -std=gnu++0x
 endif
 
-all: $(OBJ_FILES_COMMON) $(OBJ_FILES_CPP)
+
+
+all: $(OBJ_FILES_COMMON) $(OBJ_FILES_CPP) $(ANT)
 	$(GCC) obj/*.o $(MAIN) -o $(OUT) $(INC) $(LINKS)
+
+ant:
+	eval $$(eval bash ./test.sh)
 
 obj/%.o : src/common/%.c
 	$(GCC) -c -o $@ $< $(INC)
@@ -42,8 +51,11 @@ obj/%.o : src/common/%.c
 obj/%.o : src/%.cpp
 	$(GCC) -c -o $@ $< $(INC)
 
+TWtest:
+	$(GCC) TwSimpleSDL.c -o $(OUT) $(INC) $(LINKS)
+
 clean :
 	rm obj/*.o
-	
+
 docs:
 	doxygen resources/Doxyfile
