--- a/TSBB11/TSBB11.vcxproj.filters
+++ b/TSBB11/TSBB11.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClInclude Include="src\readData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\common\AntTweak\AntTweakBar.h">
+      <Filter>Header Files\Common</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\shaders\main.frag">
