Working simple solution of water visualization with billboards

--- a/TSBB11/TSBB11.vcxproj
+++ b/TSBB11/TSBB11.vcxproj
@@ -131,6 +131,9 @@
     <None Include="src\shaders\normalshader.frag" />
     <None Include="src\shaders\plaintextureshader.frag" />
     <None Include="src\shaders\plaintextureshader.vert" />
+    <None Include="src\shaders\simplevoxels.frag" />
+    <None Include="src\shaders\simplevoxels.geom" />
+    <None Include="src\shaders\simplevoxels.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
