--- a/TSBB11/TSBB11.vcxproj.filters
+++ b/TSBB11/TSBB11.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\program.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\drawable.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common\GL_utilities.h">
@@ -86,14 +89,11 @@
     <ClInclude Include="src\program.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\drawable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\shaders\main.frag">
-      <Filter>Source Files\Shaders</Filter>
-    </None>
-    <None Include="src\shaders\main.vert">
-      <Filter>Source Files\Shaders</Filter>
-    </None>
     <None Include="src\shaders\combineshader.frag">
       <Filter>Source Files\Shaders</Filter>
     </None>
@@ -125,6 +125,12 @@
       <Filter>Source Files\Shaders</Filter>
     </None>
     <None Include="src\shaders\skyshader.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\terrainshader.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\terrainshader.vert">
       <Filter>Source Files\Shaders</Filter>
     </None>
   </ItemGroup>
